# selectorllm

./: README.md  pyproject.toml
src/selectorllm/: __init__.py  agentic.py  main.py  prompt.py
tests/: test_selector.py
