[project]
name = "selectorllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.78.7",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.2",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
agentic = [
    "beautifulsoup4>=4.14.2",
    "langgraph>=1.0.1",
]
all = [
    "selectorllm[agentic]",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
